--- a/android/res/values-af/strings.xml
+++ b/android/res/values-af/strings.xml
@@ -37,7 +37,7 @@
     <string name="clear_search_cache">Maak soek kas leeg</string>
     <string name="sharing_privacy_settings">Deel en privaatheid</string>
     <string name="drawer_close">Maak die navigasielaaier toe</string>
-    <string name="why_we_need_storage_permissions_summary">FrostWire is \'n lêerblaaier en aflaaiprogram, daarom moet jy toegang hê tot jou skyf.\n\nSonder jou toestemming kan FrostWire nie werk nie.\n\nWil jy weer probeer?</string>
+    <string name="why_we_need_storage_permissions_summary">SnapLoad is \'n lêerblaaier en aflaaiprogram, daarom moet jy toegang hê tot jou skyf.\n\nSonder jou toestemming kan FrostWire nie werk nie.\n\nWil jy weer probeer?</string>
     <string name="the_more_you_give_the_more_you_receive">Hoe meer jy gee, hoe meer jy ontvang</string>
     <string name="video">Video</string>
     <string name="download">Aflaai</string>
@@ -52,7 +52,7 @@
     <string name="delete_started_torrents_summary">Verwyder .torrent lêers na die begin aflaai</string>
     <string name="use_torlock">Gebruik TorLock</string>
     <string name="seed_stop">Stop saai</string>
-    <string name="frostwire_features">FROSTWIRE CREATIVE COMMONS FEATURES</string>
+    <string name="frostwire_features">SnapLoad CREATIVE COMMONS FEATURES</string>
     <string name="search">Soek</string>
     <string name="bittorrent_off">BitTorrent af</string>
     <string name="wizard_finish">Voltooi</string>
@@ -194,7 +194,7 @@
     <string name="dialog_new_transfer_check_text">Wys hierdie volgende keer</string>
     <string name="peers">Peers</string>
     <string name="dummy_title_bold">[Bold Title]</string>
-    <string name="storage_picker_treeuri_cant_write">FrostWire kan nie op die geselekteerde bergingspad skryf nie</string>
+    <string name="storage_picker_treeuri_cant_write">SnapLoad kan nie op die geselekteerde bergingspad skryf nie</string>
     <string name="clear">Duidelik</string>
     <string name="processing_payment">Verwerking van betaling, verfris oor \'n paar sekondes</string>
     <string name="my_music">My Musiek</string>
@@ -253,7 +253,7 @@
     <string name="cancel_menu_action">Stop Oordrag</string>
     <string name="canceling">Kanselleer</string>
     <string name="issue_with_tip_donation_uri">Daar is iets fout met die donasie webadres</string>
-    <string name="frostwire_is_running">FrostWire loop</string>
+    <string name="frostwire_is_running">SnapLoad loop</string>
     <string name="http_download_status_save_dir_error">Stoor gids bestaan nie of kan nie geskep word nie</string>
     <string name="select_option_below">Kies opsie hieronder:</string>
     <string name="device_storage">Toestel se berging</string>
@@ -329,7 +329,7 @@
     <string name="rating_reminder_description">As jy lief is vir FrostWire, neem asseblief \'n oomblik om ons te beoordelen.</string>
     <string name="file_names">Lêernaam</string>
     <string name="includes_3_day_free_trial">Sluit 3 dae gratis verhoor in. Aanbeveel</string>
-    <string name="intent_text">FrostWire is \'n peer-to-peer-program om slegs gemagtigde lêers te deel. Die installering en gebruik van die program vorm nie \'n lisensie vir die verkryging of verspreiding van ongemagtigde inhoud nie.</string>
+    <string name="intent_text">SnapLoad is \'n peer-to-peer-program om slegs gemagtigde lêers te deel. Die installering en gebruik van die program vorm nie \'n lisensie vir die verkryging of verspreiding van ongemagtigde inhoud nie.</string>
     <string name="seeding_has_been_turned_off">Saai is afgeskakel</string>
     <string name="transfers_context_menu_copy_magnet">Kopieer Magneet</string>
     <string name="torrent_max_uploads_summary">Maksimum oplaaisels</string>
@@ -353,7 +353,7 @@
     <string name="rate_our_app">Beoordeel ons App</string>
     <string name="peers_n">Peers: %s</string>
     <string name="cheaper_than_cigarettes">Goedkoper as sigarette</string>
-    <string name="update_message">FrostWire het \'n nuwe PERFORMANCE UPDATE vir u afgelaai, gaan asseblief voort en raak die OK-knoppie as u dit nou wil installeer.</string>
+    <string name="update_message">SnapLoad het \'n nuwe PERFORMANCE UPDATE vir u afgelaai, gaan asseblief voort en raak die OK-knoppie as u dit nou wil installeer.</string>
     <string name="days_left">dae oor</string>
     <string name="media_player_failed">Media Player misluk</string>
     <string name="six_months">6 maande</string>
@@ -368,7 +368,7 @@
     <string name="remove_ads">Verwyder advertensies</string>
     <string name="could_not_open_transfer_detail_invalid_infohash">Kon nie Oordragbesonderhede, ongeldige InfoHash oopmaak nie</string>
     <string name="invalid_tracker_url">Ongeldige Tracker-URL</string>
-    <string name="frostwire_start_engine_service_security_exception">FrostWire kon nie behoorlik begin weens \'n gebrek aan toestemmings nie. Gee asseblief die nodige toestemmings en herbegin die aansoek</string>
+    <string name="frostwire_start_engine_service_security_exception">SnapLoad kon nie behoorlik begin weens \'n gebrek aan toestemmings nie. Gee asseblief die nodige toestemmings en herbegin die aansoek</string>
     <string name="vpn_find_out_more">Vind meer uit</string>
     <string name="vpn_suggestion_nordvpn">NORDVPN \n Gratis 7-dag verhoor</string>
     <string name="contact_us">Kontak Ons</string>
