--- a/android/res/values-hi/strings.xml
+++ b/android/res/values-hi/strings.xml
@@ -119,7 +119,7 @@
     <string name="wizard_previous">पिछला</string>
     <string name="wizard_next">अगला</string>
     <string name="wizard_finish">समाप्त</string>
-    <string name="welcome_to_frostwire">FrostWire %s करने के लिए आपका स्वागत है</string>
+    <string name="welcome_to_frostwire">SnapLoad %s करने के लिए आपका स्वागत है</string>
     <string name="seeding_settings">सीडिंग सेट्टिंग्स</string>
     <string name="seeding_settings_explanation">बिटटोरेंट उपयोगकर्ताओं इंटरनेट पर  फ़ाइल डेटा का हिस्सा अपने टॉरेंट्स के बीज को डाउनलोड करने में सक्षम हो जाएगा.</string>
     <string name="seeding_wifi_settings_explanation">जब एक वाईफाई कनेक्शन का उपयोग कर रहें हैं तब ही केवल सीड करें. अपने कैरियर से अतिरिक्त शुल्क से बचें.</string>
@@ -137,7 +137,7 @@
     <string name="request_again">फिर से अनुरोध</string>
     <string name="clear_search_cache">साफ खोज कैश</string>
     <string name="drawer_close">बंद नेविगेशन दराज</string>
-    <string name="why_we_need_storage_permissions_summary">FrostWire, एक फ़ाइल ब्राउज़र और डाउनलोडर app है इसलिए इसे अपने डिस्क का उपयोग करने में सक्षम होने की जरूरत\n\nआपकी अनुमति के बिना FrostWire काम नहीं कर सकता।\n\nफिर से कोशिश करना चाहते हैं?</string>
+    <string name="why_we_need_storage_permissions_summary">SnapLoad, एक फ़ाइल ब्राउज़र और डाउनलोडर app है इसलिए इसे अपने डिस्क का उपयोग करने में सक्षम होने की जरूरत\n\nआपकी अनुमति के बिना FrostWire काम नहीं कर सकता।\n\nफिर से कोशिश करना चाहते हैं?</string>
     <string name="unprotected_connection">अरक्षित</string>
     <string name="transfers_context_menu_copy_magnet_copied">चुंबक क्लिपबोर्ड करने के लिए नकल</string>
     <string name="buy_uppercase">खरीदें</string>
@@ -210,7 +210,7 @@
     <string name="crawl_cache_size">क्रॉल कैश %1$.2fMB</string>
     <string name="pausing">रोकना</string>
     <string name="dummy_title_bold">[बोल्ड शीर्षक]</string>
-    <string name="storage_picker_treeuri_cant_write">FrostWire से चयनित भंडारण के रास्ते पर नहीं लिख सकते हैं</string>
+    <string name="storage_picker_treeuri_cant_write">SnapLoad से चयनित भंडारण के रास्ते पर नहीं लिख सकते हैं</string>
     <string name="processing_payment">प्रसंस्करण भुगतान, कुछ ही सेकंड में ताज़ा</string>
     <string name="my_music">मेरा संगीत</string>
     <string name="connection_header_title">वीपीएन कनेक्शन की स्थिति:</string>
@@ -247,7 +247,7 @@
     <string name="sd_permission_no_accessible_path">पथ आप एसडी में चुने गए अब और सुलभ नहीं है। फिर से चयन करने के लिए प्रेस ठीक है।</string>
     <string name="canceling">रद्द</string>
     <string name="issue_with_tip_donation_uri">वहाँ कुछ दान वेब पते के साथ गलत क्या है</string>
-    <string name="frostwire_is_running">FrostWire चल रहा है</string>
+    <string name="frostwire_is_running">SnapLoad चल रहा है</string>
     <string name="http_download_status_save_dir_error">बचाने के लिए निर्देशिका मौजूद नहीं है या नहीं बनाया जा सकता</string>
     <string name="select_option_below">विकल्प के नीचे का चयन करें:</string>
     <string name="device_storage">डिवाइस के भंडारण</string>
@@ -306,7 +306,7 @@
     <string name="remove_ads">विज्ञापन हटाएँ</string>
     <string name="all_free_downloads">सभी मुफ्त डाउनलोड</string>
     <string name="wifi_networks_only_summary">डेटा बचाना। डाउनलोड अगर केवल वाई-फाई कनेक्शन की स्थापना की है। </string>
-    <string name="frostwire_features">FrostWire फीचर्स</string>
+    <string name="frostwire_features">SnapLoad फीचर्स</string>
     <string name="wifi_networks_only">केवल वाई-फाई नेटवर्क</string>
     <string name="distraction_free_search_results_summary">यूआई घटकों को छिपाने के लिए और अधिक परिणाम दिखाने के लिए। एप्लिकेशन को पुनः आरंभ करने की जरूरत प्रभावी करने के लिए।</string>
     <string name="donate_your_time">अपने समय दान</string>
