--- a/android/res/values-ja/strings.xml
+++ b/android/res/values-ja/strings.xml
@@ -19,7 +19,7 @@
  */
 -->
 <resources>
-    <string name="you_dont_need_a_vpn_to_use_frostwire_bullet_html"><![CDATA[情報： 強くお勧めしますが、 <b>FrostWireを使う上でVPNは必要ありません。 </b>]]></string>
+    <string name="you_dont_need_a_vpn_to_use_frostwire_bullet_html"><![CDATA[情報： 強くお勧めしますが、 <b>SnapLoadを使う上でVPNは必要ありません。 </b>]]></string>
     <string name="tip_touch_tags_to"><![CDATA[ <b>TIP:</b> 適用タグをタップする]]></string>
     <string name="unprotected_connections_visibility_bullet_html"><![CDATA[ <b>あなたのプライバシーは基本的な人権です</b>. 保護されていない接続は、オンラインを含めないすべてのものを意味し、 <b>ダウンロード、検索、メッセージング</b>あなたのネットワーク上の誰かが監視して傍受することができます。 インターネットサービスプロバイダ、ハッカー、政府.<br><br><b>VPNサービスを使用することを強くお勧めします</b>. <br> 信頼できるサービスを提供し、FrostWireでうまくいくいくつかのオプションがあります：]]></string>
     <string name="protected_connections_visibility_bullet_html"><![CDATA[ あなたはVPNを使ってインターネットに接続しています。 <br><br> まだ接続していない場合は、以下のいずれかのサービスを使用して接続を暗号化することをお勧めします <b>あなたのプライバシーを守る</b>. ]]></string>
@@ -42,13 +42,13 @@
     <string name="rename">名前を変更する</string>
     <string name="download">ダウンロード</string>
     <string name="update_title">アップデートの時間!</string>
-    <string name="update_message">FrostWireが新しいパフォーマンスアップデートをダウンロードしました。今すぐインストールする場合は、OKボタンを押して下さい。</string>
-    <string name="privacy">FrostWireについて</string>
+    <string name="update_message">SnapLoadが新しいパフォーマンスアップデートをダウンロードしました。今すぐインストールする場合は、OKボタンを押して下さい。</string>
+    <string name="privacy">SnapLoadについて</string>
     <string name="send_file_using">以下を使用してファイルを送信する</string>
     <string name="downloads">ダウンロード</string>
     <string name="settings">設定</string>
     <string name="files">ファイル</string>
-    <string name="minimize_frostwire">FrostWireを最小化する</string>
+    <string name="minimize_frostwire">SnapLoadを最小化する</string>
     <string name="are_you_sure_you_wanna_leave">ホームに移動しますか？</string>
     <string name="set_as_wallpaper">壁紙に設定する</string>
     <string name="failed_to_set_wallpaper">壁紙の設定に失敗しました</string>
@@ -125,11 +125,11 @@
     <string name="wizard_previous">前へ</string>
     <string name="wizard_next">次へ</string>
     <string name="wizard_finish">終了</string>
-    <string name="welcome_to_frostwire">FrostWire %s へようこそ</string>
+    <string name="welcome_to_frostwire">SnapLoad %s へようこそ</string>
     <string name="seeding_settings">シード処理設定</string>
     <string name="seeding_settings_explanation">インターネット上のBitTorrentユーザーは、あなたがトレントシード処理をしたデータのファイルセットをダウンロードすることが可能になります。</string>
     <string name="seeding_wifi_settings_explanation">WiFi接続を使用しているときのみシード処理します。あなたのキャリアからの余分な課金を避けます。</string>
-    <string name="intent_text">FrostWireは仲間同士で許可されたファイルのみを共有するためのプログラムです。本プログラムをインストールして使用することは、許可されていない内容物の獲得および配布を構成するものではありません。</string>
+    <string name="intent_text">SnapLoadは仲間同士で許可されたファイルのみを共有するためのプログラムです。本プログラムをインストールして使用することは、許可されていない内容物の獲得および配布を構成するものではありません。</string>
     <string name="accept_intent">私はFrostWireを著作権侵害目的で使用しません。</string>
     <string name="toast_on_disconnect">BitTorrentから切断されました。すべてのBitTorrent転送は中断されました。</string>
     <string name="seeds">シード</string>
@@ -190,7 +190,7 @@
     <string name="are_you_sure_you_want_to_download_the_following">次をダウンロードしてよろしいですか %1$s (%2$s)?</string>
     <string name="cant_open_file_does_not_exist">%1$sを開くことができません。ファイルがありません。</string>
     <string name="saving_to_sd_card">SDカードに保存中。</string>
-    <string name="android_will_erase_files_if_frostwire_is_uninstalled">FrostWireをアンインストールするとAndroidはダウンロードしたファイルを削除します。</string>
+    <string name="android_will_erase_files_if_frostwire_is_uninstalled">SnapLoadをアンインストールするとAndroidはダウンロードしたファイルを削除します。</string>
     <string name="saving_to_internal_memory">内部メモリに保存中</string>
     <string name="saving_to_internal_memory_description">SDカードもあります (%1$s利用可能)</string>
     <string name="device_storage">デバイスのストレージ</string>
@@ -222,8 +222,8 @@
     <string name="try_other_keywords">キーワードを減らすが、他のキーワードを試してください</string>
     <string name="learn_how_to_get_more_results">追加の結果はFrostWireプラスを試してください</string>
     <string name="rate_our_app">アプリを評価する</string>
-    <string name="rating_reminder_description">FrostWireを気に入っていただけた場合は、評価する時間を少しください。</string>
-    <string name="love_frostwire">FrostWireが好き</string>
+    <string name="rating_reminder_description">SnapLoadを気に入っていただけた場合は、評価する時間を少しください。</string>
+    <string name="love_frostwire">SnapLoadが好き</string>
     <string name="send_feedback">フィードバックを送信</string>
     <string name="choose_email_app">メールアプリを選択…</string>
     <string name="media_preview">%s プレビュー</string>
@@ -231,18 +231,18 @@
     <string name="thank_you">ありがとうございます!</string>
     <string name="keep_in_touch">Keep in touch!</string>
     <string name="why_we_need_storage_permissions">ストレージのアクセス許可が必要な理由。</string>
-    <string name="why_we_need_storage_permissions_summary">FrostWireはファイルブラウザーで、ダウンローダーアプリです。そのためディスクにアクセスできる必要があります。\n\nアクセス許可がないとFrostWireは動作できません。\n\n再度実行しますか？</string>
+    <string name="why_we_need_storage_permissions_summary">SnapLoadはファイルブラウザーで、ダウンローダーアプリです。そのためディスクにアクセスできる必要があります。\n\nアクセス許可がないとFrostWireは動作できません。\n\n再度実行しますか？</string>
     <string name="request_again">再度リクエスト</string>
-    <string name="frostwire_is_running">FrostWireは実行中です</string>
+    <string name="frostwire_is_running">SnapLoadは実行中です</string>
     <string name="unprotected_connection">保護されない接続</string>
     <string name="protected_connection">保護された接続</string>
     <string name="dht_contacts">DHT連絡先</string>
-    <string name="notify_frostwire_is_running">FrostWireが実行中の場合に通知する</string>
+    <string name="notify_frostwire_is_running">SnapLoadが実行中の場合に通知する</string>
     <string name="notify_frostwire_is_running_summary">転送のステータスをAndroidの永続通知に表示します</string>
     <string name="invalid_filename">ファイル名が正しくありません</string>
     <string name="storage_picker_treeuri_null">ストレージのパスが選択されていません</string>
     <string name="storage_picker_treeuri_not_directory">選択したパスはディレクトリではありません</string>
-    <string name="storage_picker_treeuri_cant_write">FrostWireは選択したストレージのパスに書き込みできません</string>
+    <string name="storage_picker_treeuri_cant_write">SnapLoadは選択したストレージのパスに書き込みできません</string>
     <string name="storage_picker_treeuri_error">ストレージのパスを選択時に予期しないエラー</string>
     <string name="storage_path">ストレージのパス</string>
     <!-- Important: Android is buggy with HTML, do not put HTML tags right next to text, leave a space, as it seems the text wrapping logic is considering HTML as visible text and you get premature wrapping. -->
@@ -260,7 +260,7 @@
     <string name="one_time_purchase">ワンタイム購入</string>
     <string name="activity_VPN">接続</string>
     <string name="one_year">1年</string>
-    <string name="frostwire_features">FROSTWIREの機能</string>
+    <string name="frostwire_features">SnapLoadの機能</string>
     <string name="i_have_read_and_agree_to_the">私は読んで同意する</string>
     <string name="scanning">仕上げ - スキャン</string>
     <string name="according_to_settings_i_cant_seed_unless_wifi">あなたの設定によると、Wi-Fiを使用していない限り、私は播種を開始できません。 このファイルは、インターネット対応のWi-Fiネットワークに戻ったときに自動的にシードできる状態になります。</string>
@@ -311,7 +311,7 @@
     <string name="distraction_free_search_results_summary">より多くの結果を表示するためにユーザーインターフェイスコンポーネントを非表示にします。 アプリの再起動を有効にする必要があります。</string>
     <string name="donate_your_time">あなたの時間を寄付する</string>
     <string name="distraction_free_search_results">気晴らし無料検索（ベータ版）</string>
-    <string name="help_translate_or_proofread_frostwire">FrostWireを翻訳または校正するのに役立ちます</string>
+    <string name="help_translate_or_proofread_frostwire">SnapLoadを翻訳または校正するのに役立ちます</string>
     <string name="changelog">変更ログ</string>
     <string name="cloud_download_aborted_on_mobile_data">現在の設定ではWi-Fiネットワークに接続していないときのダウンロードを防止します</string>
     <string name="sharing_privacy_settings">共有とプライバシー</string>
