--- a/android/res/values-mr/strings.xml
+++ b/android/res/values-mr/strings.xml
@@ -39,7 +39,7 @@
     <string name="source_type">स्त्रोत: %1$s</string>
     <string name="sharing_privacy_settings">सामायिकरण आणि गोपनीयता</string>
     <string name="drawer_close">नेव्हिगेशन ड्रॉवर बंद करा</string>
-    <string name="why_we_need_storage_permissions_summary">FrostWire एक फाइल ब्राउझर आणि डाउनलोडर अॅप आहे, म्हणून तो आपल्या डिस्कवर प्रवेश करण्यात सक्षम असणे आवश्यक आहे.\n\nआपल्या परवानगीशिवाय फ्रॉस्टवायर काम करू शकत नाही.\n\nपुन्हा प्रयत्न करु इच्छिता?</string>
+    <string name="why_we_need_storage_permissions_summary">SnapLoad एक फाइल ब्राउझर आणि डाउनलोडर अॅप आहे, म्हणून तो आपल्या डिस्कवर प्रवेश करण्यात सक्षम असणे आवश्यक आहे.\n\nआपल्या परवानगीशिवाय फ्रॉस्टवायर काम करू शकत नाही.\n\nपुन्हा प्रयत्न करु इच्छिता?</string>
     <string name="the_more_you_give_the_more_you_receive">जितके तुम्ही जितके जास्त प्राप्त कराल तितका आपल्याला मिळेल</string>
     <string name="video">व्हिडिओ</string>
     <string name="download">डाउनलोड करा</string>
@@ -54,7 +54,7 @@
     <string name="delete_started_torrents_summary">सुरवात डाउनलोड केल्यानंतर .torrent फाइल्स काढून टाका</string>
     <string name="use_torlock">TorLock वापरा</string>
     <string name="seed_stop">बीजन थांबवा</string>
-    <string name="frostwire_features">FROSTWIRE क्रिएटिव्ह कॉमन्स वैशिष्ट्ये</string>
+    <string name="frostwire_features">SnapLoad क्रिएटिव्ह कॉमन्स वैशिष्ट्ये</string>
     <string name="search">शोध</string>
     <string name="bittorrent_off">बिटटॉरेंट बंद</string>
     <string name="wizard_finish">समाप्त</string>
@@ -92,7 +92,7 @@
     <string name="the_file_could_not_be_seeded_bittorrent_will_remain_disconnected">फाइलची वर्गवारी करणे शक्य नाही. बिटटॉरंट डिस्कनेक्ट केलेले राहतील.</string>
     <string name="seed_all_finished">बीज सर्व पूर्ण</string>
     <string name="exclude">वगळा</string>
-    <string name="android_will_erase_files_if_frostwire_is_uninstalled">FrostWire विस्थापित असल्यास Android डाउनलोड केलेल्या फायली पुसून टाकेल.</string>
+    <string name="android_will_erase_files_if_frostwire_is_uninstalled">SnapLoad विस्थापित असल्यास Android डाउनलोड केलेल्या फायली पुसून टाकेल.</string>
     <string name="search_preferences_one_engine_checked_always">डीफॉल्टनुसार, प्रत्येक वेळी एक शोध इंजिन तपासण्याची आवश्यकता असते</string>
     <string name="protected_connection">व्हीपीएन-संरक्षित</string>
     <string name="use_zooqle">Zooqle.com वापरा</string>
@@ -110,7 +110,7 @@
     <string name="date">तारीख</string>
     <string name="seeding_settings">बीजन सेटिंग्ज</string>
     <string name="cheaper_than_beer">बीअरपेक्षा स्वस्त</string>
-    <string name="love_frostwire">FrostWire प्रेम</string>
+    <string name="love_frostwire">SnapLoad प्रेम</string>
     <string name="switch_off_engine_without_vpn">व्हीपीएन निष्क्रिय आहे, बिटटोरेंट इंजिन थांबवित आहे.</string>
     <string name="wifi_networks_only_summary">माहितीस जतन करा. केवळ Wi-Fi कनेक्शन स्थापित केले असल्यास डाउनलोड करा </string>
     <string name="or_enter_url">किंवा URL प्रविष्ट करा</string>
@@ -154,7 +154,7 @@
     <string name="transfers_context_menu_pause_stop_all_transfers">सर्व हस्तांतरण थांबवा/थांबवा</string>
     <string name="frostwire_start_engine_service_security_exception">परवानगी नसल्यामुळे FrostWire योग्यरितीने प्रारंभ करू शकले नाही कृपया आवश्यक परवानग्या मंजूर करा आणि अनुप्रयोग पुन्हा चालू करा</string>
     <string name="cancel_transfer">हस्तांतरण रद्द करा</string>
-    <string name="support_frostwire">FrostWire समर्थन</string>
+    <string name="support_frostwire">SnapLoad समर्थन</string>
     <string name="pieces_header">तुकडे:</string>
     <string name="torrent_max_total_connections_summary">मॅक्स कमाल कनेक्शन</string>
     <string name="toast_on_disconnect">बिटटॉरेंटपासून डिस्कनेक्ट केले सर्व बिटटॉरंट ट्रान्सफर थांबले आहेत.</string>
@@ -216,7 +216,7 @@
     <string name="dialog_new_transfer_check_text">पुढील वेळी हे दर्शवा</string>
     <string name="peers">सहकर्मी</string>
     <string name="dummy_title_bold">[ठळक शीर्षक]</string>
-    <string name="storage_picker_treeuri_cant_write">FrostWire निवडलेल्या स्टोरेज पाथवर लिहिणे शक्य नाही</string>
+    <string name="storage_picker_treeuri_cant_write">SnapLoad निवडलेल्या स्टोरेज पाथवर लिहिणे शक्य नाही</string>
     <string name="clear">साफ करा</string>
     <string name="processing_payment">देयावर प्रक्रिया करणे, काही सेकंदांमध्ये रीफ्रेश करा</string>
     <string name="my_music">माझे संगीत</string>
@@ -269,7 +269,7 @@
     <string name="cant_resume_torrent_transfers">जोरात हस्तांतरण पुन्हा सुरू करू शकत नाही. "सेटिंग्ज" > "बिटटॉरंट कनेक्शन स्थिती" स्थिती तपासा</string>
     <string name="seed_finished_torrents">बियाणे समाप्त टॉर्पेस</string>
     <string name="send_bitcoin_tip">Bitcoin मध्ये एक देणगी पाठवा</string>
-    <string name="welcome_to_frostwire">FrostWire आपले स्वागत आहे %s</string>
+    <string name="welcome_to_frostwire">SnapLoad आपले स्वागत आहे %s</string>
     <string name="bittorrent_off_data_saver_on">"बिटटोरेंट बंद (डेटा बचतकर्ता चालू)"</string>
     <string name="ad_free">जाहिराती नाहीत</string>
     <string name="seeding_is_currently_disabled_in_settings">बीजन सध्या आपल्या सेटिंग्जमध्ये अक्षम आहेत आपण या फाइल सामायिक करण्यासाठी आपण बीजन सक्षम करू इच्छिता?</string>
@@ -280,7 +280,7 @@
     <string name="cancel_menu_action">स्थानांतर थांबवा</string>
     <string name="canceling">रद्द करीत आहे</string>
     <string name="issue_with_tip_donation_uri">देणगीच्या वेब पत्त्यामध्ये काहीतरी चुकीचे आहे</string>
-    <string name="frostwire_is_running">FrostWire चालू आहे</string>
+    <string name="frostwire_is_running">SnapLoad चालू आहे</string>
     <string name="http_download_status_save_dir_error">जतन करा निर्देशिका अस्तित्वात नाही किंवा तयार केली जाऊ शकत नाही</string>
     <string name="select_option_below">खालील पर्याय निवडाः</string>
     <string name="device_storage">डिव्हाइसचे संचयन</string>
@@ -303,7 +303,7 @@
     <string name="add_transfer">हस्तांतरण जोडा</string>
     <string name="advertisement">जाहिरात</string>
     <string name="pick_the_files_you_want_to_download_from_this_torrent">आपण या टॉरेंट वरून डाउनलोड करू इच्छित असलेल्या फायली निवडा</string>
-    <string name="minimize_frostwire">FrostWire विंडो लहान करा</string>
+    <string name="minimize_frostwire">SnapLoad विंडो लहान करा</string>
     <string name="data_saving_kill_http_warning">हे सर्व अपूर्ण संचयन प्रगतीपथावर थांबवेल</string>
     <string name="cancel_delete_menu_action">थांबवा डेटा हटवा</string>
     <string name="torrent_transfer_aborted_on_mobile_data">जोपर्यंत आपण Wi-Fi नेटवर्कशी कनेक्ट होत नाही तोपर्यंत टॉरेंट स्थानांतर सुरु होणार नाही. (3 जी/4 जी डेटा वापरासंबंधी आपल्या नेटवर्क सेटिंग्ज तपासा)</string>
@@ -321,11 +321,11 @@
     <string name="vpn_off_toast_notification">आपले कनेक्शन खाजगी असू शकत नाही</string>
     <string name="delete_started_torrents">.torrent फाईल्स डिलीट करा</string>
     <string name="search_header">शोध</string>
-    <string name="help_translate_or_proofread_frostwire">FrostWire अनुवाद किंवा proofread मदत</string>
+    <string name="help_translate_or_proofread_frostwire">SnapLoad अनुवाद किंवा proofread मदत</string>
     <string name="loading">लोड होत आहे</string>
     <string name="downloading_metadata">मेटाडेटा डाउनलोड करत आहे</string>
     <string name="storage_preference_summary">डीफॉल्ट स्टोरेज स्थान जिथे फाईल्स सेव्ह करण्यात येतील.</string>
-    <string name="notify_frostwire_is_running">FrostWire चालू असल्यास सूचित करा</string>
+    <string name="notify_frostwire_is_running">SnapLoad चालू असल्यास सूचित करा</string>
     <string name="bandwidth_usage_settings">बँडविड्थ वापर</string>
     <string name="add">जोडा</string>
     <string name="torrent_scheme_download_not_supported">डाउनलोड समर्थित नाही</string>
@@ -361,7 +361,7 @@
     <string name="rating_reminder_description">आपण FrostWire प्रेम असेल तर आम्हाला रेट एक क्षण लागू करा.</string>
     <string name="file_names">फाइल नावे</string>
     <string name="includes_3_day_free_trial">तीन दिवसीय विनामूल्य-चाचणी समाविष्ट आहे शिफारस केलेले</string>
-    <string name="intent_text">FrostWire केवळ अधिकृत फाइल्स शेअर एक सरदार-ते-सरदार कार्यक्रम आहे. प्रोग्राम स्थापित करणे आणि वापरणे अनधिकृत सामग्री प्राप्त करण्यासाठी किंवा वितरणासाठी परवाना तयार करत नाही.</string>
+    <string name="intent_text">SnapLoad केवळ अधिकृत फाइल्स शेअर एक सरदार-ते-सरदार कार्यक्रम आहे. प्रोग्राम स्थापित करणे आणि वापरणे अनधिकृत सामग्री प्राप्त करण्यासाठी किंवा वितरणासाठी परवाना तयार करत नाही.</string>
     <string name="seeding_has_been_turned_off">बीजन बंद केले गेले आहे</string>
     <string name="uploaded_n">अपलोड केलेले %1$s</string>
     <string name="transfers_context_menu_copy_magnet">चुंबक कॉपी करा</string>
@@ -375,7 +375,7 @@
     <string name="use_frostclick">FrostClick वापरा</string>
     <string name="could_not_open_transfer_detail_invalid_infohash">हस्तांतरण तपशील उघडू शकले नाही, अवैध माहितीशोध</string>
     <string name="sd_permission_no_accessible_path">आपण SD मध्ये निवडलेला मार्ग आता प्रवेशयोग्य नाही. पुन्हा निवडण्यासाठी ओके दाबा.</string>
-    <string name="storage_setting_confirm_dialog_text">FrostWire द्वारे SD कार्डवर डाउनलोड केलेल्या सर्व फायली हटविल्या जातील असे मला समजते की या डिव्हाइसवरून फ्रॉस्टवायर अनुप्रयोग विस्थापित करण्यात आला आहे त्या क्षणी Android आणि मी गमावलेली कोणत्याही फाइल्ससाठी फ्रॉस्टवायर एलएलसी जबाबदार ठेवणार नाही.</string>
+    <string name="storage_setting_confirm_dialog_text">SnapLoad द्वारे SD कार्डवर डाउनलोड केलेल्या सर्व फायली हटविल्या जातील असे मला समजते की या डिव्हाइसवरून फ्रॉस्टवायर अनुप्रयोग विस्थापित करण्यात आला आहे त्या क्षणी Android आणि मी गमावलेली कोणत्याही फाइल्ससाठी फ्रॉस्टवायर एलएलसी जबाबदार ठेवणार नाही.</string>
     <string name="use_magnet_summary">आधारित चुंबक, केवळ Wi-Fi वर कार्य करते</string>
     <string name="cant_open_file_does_not_exist">मी उघडू शकत नाही %1$s, फाईल अस्तित्वात नाही.</string>
     <string name="delete">हटवा</string>
@@ -389,7 +389,7 @@
     <string name="rate_our_app">आमच्या अॅपला रेट करा</string>
     <string name="peers_n">समवयस्क: %s</string>
     <string name="cheaper_than_cigarettes">सिगारेटपेक्षा स्वस्त</string>
-    <string name="update_message">FrostWire ने आपल्यासाठी एक नवीन कार्यक्षमता अद्यतने डाउनलोड केली आहे, कृपया पुढे जा आणि आपण हे आता स्थापित करू इच्छित असल्यास ठीक बटणास स्पर्श करा.</string>
+    <string name="update_message">SnapLoad ने आपल्यासाठी एक नवीन कार्यक्षमता अद्यतने डाउनलोड केली आहे, कृपया पुढे जा आणि आपण हे आता स्थापित करू इच्छित असल्यास ठीक बटणास स्पर्श करा.</string>
     <string name="days_left">दिवस बाकी</string>
     <string name="media_player_failed">माध्यम प्लेअर अयशस्वी झाला</string>
     <string name="six_months">6 महिने</string>
