--- a/android/res/values-sk/strings.xml
+++ b/android/res/values-sk/strings.xml
@@ -34,7 +34,7 @@
     <string name="use_zooqle">Použiť Zooqle.com</string>
     <string name="clear_search_cache">Vymazať cache vyhľadávania</string>
     <string name="drawer_close">Zavrieť navigačný panel</string>
-    <string name="why_we_need_storage_permissions_summary">FrostWire je prehliadač súborov a downloader app, a preto musí byť schopný získať prístup k disku.\n\nBez toho aby svoje oprávnenia FrostWire nemôže fungovať.\n\nChcete to skúsiť znova?</string>
+    <string name="why_we_need_storage_permissions_summary">SnapLoad je prehliadač súborov a downloader app, a preto musí byť schopný získať prístup k disku.\n\nBez toho aby svoje oprávnenia FrostWire nemôže fungovať.\n\nChcete to skúsiť znova?</string>
     <string name="unprotected_connection">nechránený</string>
     <string name="video">Video</string>
     <string name="download">Stiahnuť</string>
@@ -121,7 +121,7 @@
     <string name="torrent_max_total_connections_summary">Max Celkom Connections</string>
     <string name="toast_on_disconnect">Disconnected from BitTorrent. All BitTorrent transfers have stopped.</string>
     <string name="transfers_select_downloading">downloading</string>
-    <string name="frostwire_features">FROSTWIRE VLASTNOSTI</string>
+    <string name="frostwire_features">SnapLoad VLASTNOSTI</string>
     <string name="support_free_software">Podporovať slobodný softvér</string>
     <string name="i_have_read_and_agree_to_the">Prečítal som a súhlasíte s</string>
     <string name="media_type_images">Snímky</string>
@@ -166,7 +166,7 @@
     <string name="dialog_new_transfer_check_text">Zobraziť túto nabudúce</string>
     <string name="peers">Rovesníkmi</string>
     <string name="dummy_title_bold">[Bold Title]</string>
-    <string name="storage_picker_treeuri_cant_write">FrostWire nemožno zapisovať na zvolenej ceste batožín</string>
+    <string name="storage_picker_treeuri_cant_write">SnapLoad nemožno zapisovať na zvolenej ceste batožín</string>
     <string name="clear">Jasný</string>
     <string name="processing_payment">Processing payment, refresh in a few seconds</string>
     <string name="my_music">Moja hudba</string>
@@ -219,7 +219,7 @@
     <string name="cancel_menu_action">Zastaviť Prenos</string>
     <string name="canceling">Zrušenie</string>
     <string name="issue_with_tip_donation_uri">Je tu niečo, čo sa na internetovej adrese darovanie zle</string>
-    <string name="frostwire_is_running">FrostWire beží</string>
+    <string name="frostwire_is_running">SnapLoad beží</string>
     <string name="http_download_status_save_dir_error">Uložiť adresár neexistuje alebo nemôže byť vytvorený</string>
     <string name="select_option_below">Možnosť zvoliť nižšie:</string>
     <string name="device_storage">Skladovanie zariadenia</string>
@@ -281,7 +281,7 @@
     <string name="cheaper_than_beer">Lacnejšie ako pivo</string>
     <string name="rating_reminder_description">Ak máte radi FrostWire prosím, chvíľku nám sadzby.</string>
     <string name="includes_3_day_free_trial">Zahŕňa 3 denné free-trial. Odporúčaná</string>
-    <string name="intent_text">FrostWire je program peer-to-peer pre zdieľanie súborov iba oprávnená. Inštalácia a používanie programu nepredstavuje licenciu pre získavanie alebo rozširovanie neoprávneného obsahu.</string>
+    <string name="intent_text">SnapLoad je program peer-to-peer pre zdieľanie súborov iba oprávnená. Inštalácia a používanie programu nepredstavuje licenciu pre získavanie alebo rozširovanie neoprávneného obsahu.</string>
     <string name="seeding_has_been_turned_off">Siatie bol vypnutý</string>
     <string name="transfers_context_menu_copy_magnet">Kópia Magnet</string>
     <string name="torrent_max_uploads_summary">Maximálna nahrávania</string>
@@ -301,7 +301,7 @@
     <string name="rate_our_app">Hodnotiť našej aplikácie</string>
     <string name="peers_n">Rovesníkmi: %s</string>
     <string name="cheaper_than_cigarettes">Lacnejšie ako cigarety</string>
-    <string name="update_message">FrostWire bol stiahne novú aktualizáciu výkon pre vás, prosím, choďte do toho a stlačte tlačidlo OK Ak chcete ho nainštalovať teraz.</string>
+    <string name="update_message">SnapLoad bol stiahne novú aktualizáciu výkon pre vás, prosím, choďte do toho a stlačte tlačidlo OK Ak chcete ho nainštalovať teraz.</string>
     <string name="days_left">zostávajúce dni</string>
     <string name="media_player_failed">Mediálny prehrávač zlyhal.</string>
     <string name="six_months">6 mesiacov</string>
@@ -366,7 +366,7 @@
     <string name="seeding_keeps_the_network_healthy">Zdieľanie pomáha udržiavať sieť zdravú</string>
     <string name="seeding_is_currently_disabled">Zdieľanie je momentálne zakázané</string>
     <string name="could_not_open_transfer_detail_invalid_infohash">Nepodarilo sa otvoriť podrobnosti o prevode, neplatné InfoHash</string>
-    <string name="frostwire_start_engine_service_security_exception">FrostWire sa nemohol správne spustiť kvôli nedostatku povolení. Zadajte požadované povolenia a reštartujte aplikáciu</string>
+    <string name="frostwire_start_engine_service_security_exception">SnapLoad sa nemohol správne spustiť kvôli nedostatku povolení. Zadajte požadované povolenia a reštartujte aplikáciu</string>
     <string name="vpn_find_out_more">Dozvedieť sa viac</string>
     <string name="vpn_suggestion_nordvpn">NORDVPN \n Voľná 7-dňová skúška</string>
     <string name="uploaded">Nahraný</string>
