--- a/android/res/values-te/strings.xml
+++ b/android/res/values-te/strings.xml
@@ -38,7 +38,7 @@
     <string name="source_type">మూలం: %1$s</string>
     <string name="sharing_privacy_settings">భాగస్వామ్యం మరియు గోప్యత</string>
     <string name="drawer_close">నావిగేషన్ డ్రాయర్ను మూసివేయి</string>
-    <string name="why_we_need_storage_permissions_summary">FrostWire అనేది ఒక ఫైల్ బ్రౌజర్ మరియు డౌన్లోడ్ చేసే అనువర్తనం, అందువల్ల ఇది మీ డిస్క్ను ప్రాప్యత చేయగలదు.\n\nమీ అనుమతులు లేకుండా ఫ్రోస్ట్వైర్ పనిచేయదు.\n\nమళ్ళీ ప్రయత్నించాలనుకుంటున్నారా?</string>
+    <string name="why_we_need_storage_permissions_summary">SnapLoad అనేది ఒక ఫైల్ బ్రౌజర్ మరియు డౌన్లోడ్ చేసే అనువర్తనం, అందువల్ల ఇది మీ డిస్క్ను ప్రాప్యత చేయగలదు.\n\nమీ అనుమతులు లేకుండా ఫ్రోస్ట్వైర్ పనిచేయదు.\n\nమళ్ళీ ప్రయత్నించాలనుకుంటున్నారా?</string>
     <string name="the_more_you_give_the_more_you_receive">మరింత మీరు మరింత మీరు అందుకుంటారు</string>
     <string name="video">వీడియో</string>
     <string name="download">డౌన్లోడ్</string>
@@ -53,7 +53,7 @@
     <string name="delete_started_torrents_summary">.torrent ఫైళ్లను డౌన్లోడ్ చేయటం మొదలుపెట్టిన తర్వాత తొలగించండి</string>
     <string name="use_torlock">TorLock ఉపయోగించండి</string>
     <string name="seed_stop">నాట్లు వేయండి</string>
-    <string name="frostwire_features">FROSTWIRE CREATIVE COMMONS FEATURES</string>
+    <string name="frostwire_features">SnapLoad CREATIVE COMMONS FEATURES</string>
     <string name="search">శోధన</string>
     <string name="bittorrent_off">బిట్ టోర్రెంట్ ఆఫ్</string>
     <string name="wizard_finish">ముగించు</string>
@@ -213,7 +213,7 @@
     <string name="dialog_new_transfer_check_text">ఈ తదుపరిసారి చూపించు</string>
     <string name="peers">తోటివారి</string>
     <string name="dummy_title_bold">[బోల్డ్ శీర్షిక]</string>
-    <string name="storage_picker_treeuri_cant_write">FrostWire ఎంపిక నిల్వ మార్గంలో రాయలేదు</string>
+    <string name="storage_picker_treeuri_cant_write">SnapLoad ఎంపిక నిల్వ మార్గంలో రాయలేదు</string>
     <string name="clear">ప్రశాంతంగా</string>
     <string name="processing_payment">కొన్ని సెకన్లలో చెల్లింపును ప్రాసెస్ చేయండి, రిఫ్రెష్ చేయండి</string>
     <string name="my_music">నా సంగీతం</string>
@@ -277,7 +277,7 @@
     <string name="cancel_menu_action">బదిలీని ఆపివేయి</string>
     <string name="canceling">రద్దు</string>
     <string name="issue_with_tip_donation_uri">విరాళం వెబ్ చిరునామాతో ఏదో తప్పు ఉంది</string>
-    <string name="frostwire_is_running">FrostWire రన్</string>
+    <string name="frostwire_is_running">SnapLoad రన్</string>
     <string name="http_download_status_save_dir_error">డైరెక్టరీ సేవ్ లేదు లేదా సృష్టించబడదు</string>
     <string name="select_option_below">దిగువ ఎంపికను ఎంచుకోండి:</string>
     <string name="device_storage">పరికరం యొక్క నిల్వ</string>
@@ -300,7 +300,7 @@
     <string name="add_transfer">బదిలీని జోడించండి</string>
     <string name="advertisement">ప్రకటన</string>
     <string name="pick_the_files_you_want_to_download_from_this_torrent">మీరు ఈ టొరెంట్ నుండి డౌన్లోడ్ చేయదలిచిన ఫైళ్ళను ఎంచుకోండి</string>
-    <string name="minimize_frostwire">FrostWire కనిష్టీకరించు</string>
+    <string name="minimize_frostwire">SnapLoad కనిష్టీకరించు</string>
     <string name="data_saving_kill_http_warning">ఇది అన్ని అసంపూర్తి బదిలీలు ప్రోగ్రెస్లో నిలిపివేయబడుతుంది</string>
     <string name="cancel_delete_menu_action">ఆపు మరియు డేటా తొలగించు</string>
     <string name="torrent_transfer_aborted_on_mobile_data">మీరు Wi-Fi నెట్వర్క్కు కనెక్ట్ చేసే వరకు టోరెంట్ బదిలీలు ప్రారంభం కావు. (3G/4G డేటా వినియోగానికి సంబంధించి మీ నెట్వర్క్ సెట్టింగ్లను తనిఖీ చేయండి)</string>
@@ -322,7 +322,7 @@
     <string name="loading">లోడ్</string>
     <string name="downloading_metadata">మెటాడేటాను డౌన్లోడ్ చేస్తోంది</string>
     <string name="storage_preference_summary">ఫైల్లు సేవ్ చేయబడే డిఫాల్ట్ నిల్వ స్థానం.</string>
-    <string name="notify_frostwire_is_running">FrostWire నడుస్తుంటే తెలియజేయి</string>
+    <string name="notify_frostwire_is_running">SnapLoad నడుస్తుంటే తెలియజేయి</string>
     <string name="bandwidth_usage_settings">బ్యాండ్విడ్త్ వినియోగం</string>
     <string name="add">చేర్చు</string>
     <string name="torrent_scheme_download_not_supported">డౌన్లోడ్ మద్దతు లేదు</string>
@@ -358,7 +358,7 @@
     <string name="rating_reminder_description">మీరు ఫ్రోస్ట్వైర్ని ఇష్టపడితే మాకు రేట్ చేయడానికి ఒక క్షణం పడుతుంది.</string>
     <string name="file_names">ఫైల్ పేర్లు</string>
     <string name="includes_3_day_free_trial">3 రోజుల ఫ్రీ ట్రయల్ కలిపి. సిఫార్సు</string>
-    <string name="intent_text">FrostWire మాత్రమే అధికారం ఫైళ్లను భాగస్వామ్యం కోసం ఒక పీర్-టు-పీర్ కార్యక్రమం. ప్రోగ్రామ్ను ఇన్స్టాల్ చేయడం మరియు ఉపయోగించడం అనధికార కంటెంట్ను పొందడానికి లేదా పంపిణీ చేయడానికి లైసెన్స్ని కలిగి ఉండదు.</string>
+    <string name="intent_text">SnapLoad మాత్రమే అధికారం ఫైళ్లను భాగస్వామ్యం కోసం ఒక పీర్-టు-పీర్ కార్యక్రమం. ప్రోగ్రామ్ను ఇన్స్టాల్ చేయడం మరియు ఉపయోగించడం అనధికార కంటెంట్ను పొందడానికి లేదా పంపిణీ చేయడానికి లైసెన్స్ని కలిగి ఉండదు.</string>
     <string name="seeding_has_been_turned_off">నాటడం నిలిపివేయబడింది</string>
     <string name="uploaded_n">అప్లోడ్ %1$s</string>
     <string name="transfers_context_menu_copy_magnet">మాగ్నెట్ను కాపీ చేయండి</string>
@@ -372,7 +372,7 @@
     <string name="use_frostclick">FrostClick ఉపయోగించండి</string>
     <string name="could_not_open_transfer_detail_invalid_infohash">బదిలీ వివరాలను తెరవడం సాధ్యం కాలేదు, ఇన్ఫో హాష్ చెల్లదు</string>
     <string name="sd_permission_no_accessible_path">మీరు SD లో ఎంచుకున్న మార్గం ఇకపై అందుబాటులో ఉండదు. మళ్లీ ఎంచుకోవడానికి సరే నొక్కండి.</string>
-    <string name="storage_setting_confirm_dialog_text">FrostWire ద్వారా SD కార్డుకి డౌన్లోడ్ చేసిన అన్ని ఫైల్లు తొలగించబడతాయి మరియు ANDROID ఈ ఫ్రొస్ట్వైర్ అనువర్తనం ఈ పరికరం నుండి అన్ఇన్స్టాల్ చేయబడిన క్షణం నుండి తొలగించబడుతుంది మరియు కోల్పోయిన ఫైళ్ళకు నేను FrostWire LLC బాధ్యతను కలిగి ఉండదు.</string>
+    <string name="storage_setting_confirm_dialog_text">SnapLoad ద్వారా SD కార్డుకి డౌన్లోడ్ చేసిన అన్ని ఫైల్లు తొలగించబడతాయి మరియు ANDROID ఈ ఫ్రొస్ట్వైర్ అనువర్తనం ఈ పరికరం నుండి అన్ఇన్స్టాల్ చేయబడిన క్షణం నుండి తొలగించబడుతుంది మరియు కోల్పోయిన ఫైళ్ళకు నేను FrostWire LLC బాధ్యతను కలిగి ఉండదు.</string>
     <string name="use_magnet_summary">మాగ్నెట్ ఆధారిత, Wi-Fi లో మాత్రమే పనిచేస్తుంది</string>
     <string name="cant_open_file_does_not_exist">నేను తెరవలేను %1$s, ఫైల్ ఉనికిలో లేదు.</string>
     <string name="delete">తొలగించు</string>
