--- a/android/res/values-uk/strings.xml
+++ b/android/res/values-uk/strings.xml
@@ -34,7 +34,7 @@
     <string name="use_zooqle">користування Zooqle.com</string>
     <string name="clear_search_cache">Очистити кеш пошуку</string>
     <string name="drawer_close">Закрити панель навігації</string>
-    <string name="why_we_need_storage_permissions_summary">FrostWire є файловий браузер і додаток-завантажувач, тому він повинен бути в змозі отримати доступ до диска.\n\nБез ваших дозволів FrostWire не може працювати.\n\nХочете спробувати ще раз?</string>
+    <string name="why_we_need_storage_permissions_summary">SnapLoad є файловий браузер і додаток-завантажувач, тому він повинен бути в змозі отримати доступ до диска.\n\nБез ваших дозволів FrostWire не може працювати.\n\nХочете спробувати ще раз?</string>
     <string name="unprotected_connection">незахищений</string>
     <string name="video">Відео</string>
     <string name="download">Завантажити</string>
@@ -120,7 +120,7 @@
     <string name="torrent_max_total_connections_summary">Макс Всього підключень</string>
     <string name="toast_on_disconnect">Відключений від BitTorrent. Всі переклади BitTorrent припинилися.</string>
     <string name="transfers_select_downloading">завантаження</string>
-    <string name="frostwire_features">FROSTWIRE ОСОБЛИВОСТІ</string>
+    <string name="frostwire_features">SnapLoad ОСОБЛИВОСТІ</string>
     <string name="support_free_software">Підтримка вільного програмного забезпечення</string>
     <string name="i_have_read_and_agree_to_the">Я прочитав і згоден на</string>
     <string name="media_type_images">Зображення</string>
@@ -164,7 +164,7 @@
     <string name="dialog_new_transfer_check_text">Показати це наступного разу</string>
     <string name="peers">Однолітки</string>
     <string name="dummy_title_bold">[Bold Title]</string>
-    <string name="storage_picker_treeuri_cant_write">FrostWire не може писати на обраному шляху зберігання</string>
+    <string name="storage_picker_treeuri_cant_write">SnapLoad не може писати на обраному шляху зберігання</string>
     <string name="clear">Ясно</string>
     <string name="processing_payment">Обробка платежів, оновити протягом декількох секунд</string>
     <string name="my_music">Моя музика</string>
@@ -216,7 +216,7 @@
     <string name="cancel_menu_action">Зупинити передачу</string>
     <string name="canceling">Скасування</string>
     <string name="issue_with_tip_donation_uri">Там щось не так з вебпожертвипожертви пожертви</string>
-    <string name="frostwire_is_running">FrostWire працює</string>
+    <string name="frostwire_is_running">SnapLoad працює</string>
     <string name="http_download_status_save_dir_error">Зберегти каталог не існує або не може бути створений</string>
     <string name="select_option_below">Виберіть варіант нижче:</string>
     <string name="device_storage">Зберігання пристрої</string>
@@ -274,7 +274,7 @@
     <string name="cheaper_than_beer">Дешевше, ніж пиво</string>
     <string name="rating_reminder_description">Якщо ви любите FrostWire ласка, знайдіть час, щоб оцінити нас.</string>
     <string name="includes_3_day_free_trial">Включає в себе 3-х днів безкоштовної пробної версії. Рекомендується.</string>
-    <string name="intent_text">FrostWire це програма рівноправних вузлів ЛВС для спільного використання тільки дозволених файлів. Установка і використання програми не є ліцензією на отримання або розповсюдження несанкціонованого контенту.</string>
+    <string name="intent_text">SnapLoad це програма рівноправних вузлів ЛВС для спільного використання тільки дозволених файлів. Установка і використання програми не є ліцензією на отримання або розповсюдження несанкціонованого контенту.</string>
     <string name="seeding_has_been_turned_off">Посів був вимкнений</string>
     <string name="transfers_context_menu_copy_magnet">Копіювати магніт</string>
     <string name="torrent_max_uploads_summary">Max Uploads</string>
@@ -294,7 +294,7 @@
     <string name="rate_our_app">Оцініть наш додаток</string>
     <string name="peers_n">Однолітки: %s</string>
     <string name="cheaper_than_cigarettes">Дешевше, ніж сигарети</string>
-    <string name="update_message">FrostWire скачав нове оновлення продуктивності для вас, будь ласка, йти вперед і натисніть кнопку OK, якщо ви хочете встановити його зараз.</string>
+    <string name="update_message">SnapLoad скачав нове оновлення продуктивності для вас, будь ласка, йти вперед і натисніть кнопку OK, якщо ви хочете встановити його зараз.</string>
     <string name="days_left">днів залишилося</string>
     <string name="media_player_failed">Медіаплеєр не вдалося</string>
     <string name="six_months">6 місяців</string>
@@ -365,7 +365,7 @@
     <string name="nothing_is_currently_seeding">Наразі нічого не ділиться</string>
     <string name="seeding_keeps_the_network_healthy">Спільний доступ допомагає зберегти мережу здоровою</string>
     <string name="seeding_is_currently_disabled">Спільний доступ в даний момент вимкнено</string>
-    <string name="frostwire_start_engine_service_security_exception">FrostWire не вдалося запустити належним чином через відсутність дозволів. Будь ласка, надайте необхідні дозволи та перезапустіть програму</string>
+    <string name="frostwire_start_engine_service_security_exception">SnapLoad не вдалося запустити належним чином через відсутність дозволів. Будь ласка, надайте необхідні дозволи та перезапустіть програму</string>
     <string name="vpn_find_out_more">Дізнатися більше</string>
     <string name="vpn_suggestion_nordvpn">NORDVPN \n Безкоштовна 7-денна пробна версія</string>
     <string name="uploaded">Завантажено</string>
