--- a/android/res/values-ur/strings.xml
+++ b/android/res/values-ur/strings.xml
@@ -71,7 +71,7 @@
     <string name="request_again">درخواست دوبارہ</string>
     <string name="use_zooqle">استعمال Zooqle.com</string>
     <string name="drawer_close">بند کریں نیویگیشن دراز</string>
-    <string name="why_we_need_storage_permissions_summary">FrostWire، ایک فائل براؤزر اور ڈاؤنلوڈر اپلی کیشن ہے اس وجہ سے یہ آپ کی ڈسک تک رسائی حاصل کرنے کے قابل ہو جائے کرنے کی ضرورت ہے.\n\nآپ اجازتوں بغیر FrostWire کام نہیں کر سکتے.\n\nدوبارہ کوشش کرنا چاہتے ہیں؟</string>
+    <string name="why_we_need_storage_permissions_summary">SnapLoad، ایک فائل براؤزر اور ڈاؤنلوڈر اپلی کیشن ہے اس وجہ سے یہ آپ کی ڈسک تک رسائی حاصل کرنے کے قابل ہو جائے کرنے کی ضرورت ہے.\n\nآپ اجازتوں بغیر FrostWire کام نہیں کر سکتے.\n\nدوبارہ کوشش کرنا چاہتے ہیں؟</string>
     <string name="unprotected_connection">غیر محفوظ</string>
     <string name="download">لوڈ</string>
     <string name="transfers_context_menu_copy_magnet_copied">مقناطیس کی کلپ بورڈ پر کاپی</string>
@@ -116,7 +116,7 @@
     <string name="accept_intent">میں کاپی رائٹ کی خلاف ورزی کے لئے FrostWire استعمال نہیں کرے گا</string>
     <string name="remove_torrent_and_data">اوپر اور ڈیٹا کو ہٹا دیں</string>
     <string name="seeding_settings">بوائ ترتیبات</string>
-    <string name="love_frostwire">FrostWire محبت</string>
+    <string name="love_frostwire">SnapLoad محبت</string>
     <string name="wifi_networks_only_summary">ڈیٹا کو محفوظ کریں. لوڈ صرف وائی فائی کنکشن قائم ہے تو.</string>
     <string name="or_enter_url">یا یو آر ایل درج کریں</string>
     <string name="disabled">معذور افراد</string>
@@ -141,7 +141,7 @@
     <string name="support_frostwire">سپورٹ FrostWire</string>
     <string name="toast_on_disconnect">BitTorrent کے سے رابطہ منقطع ہوگیا. تمام BitTorrent کے ٹرانسفر بند کر دیا ہے.</string>
     <string name="transfers_select_downloading">ڈاؤن لوڈ کرنے</string>
-    <string name="frostwire_features">FROSTWIRE خصوصیات</string>
+    <string name="frostwire_features">SnapLoad خصوصیات</string>
     <string name="support_free_software">مفت سافٹ ویئر سپورٹ</string>
     <string name="i_have_read_and_agree_to_the">میں نے پڑھا اور ان سے متفق ہوں</string>
     <string name="media_type_images">امیجز</string>
@@ -182,7 +182,7 @@
     <string name="dialog_new_transfer_check_text">اس اگلی بار دکھائیں</string>
     <string name="peers">ہم عمر</string>
     <string name="dummy_title_bold">[Bold Title]</string>
-    <string name="storage_picker_treeuri_cant_write">FrostWire منتخب شدہ اسٹوریج راہ پر نہیں لکھ سکتا</string>
+    <string name="storage_picker_treeuri_cant_write">SnapLoad منتخب شدہ اسٹوریج راہ پر نہیں لکھ سکتا</string>
     <string name="clear">صاف</string>
     <string name="processing_payment">پروسیسنگ ادائیگی، چند سیکنڈ میں ریفریش</string>
     <string name="my_music">میری موسیقی</string>
@@ -218,7 +218,7 @@
     <string name="no_trial_period_included">کوئی آزمائشی مدت بھی شامل ہے</string>
     <string name="cant_resume_torrent_transfers">سیلاب کی منتقلی دوبارہ شروع نہیں کیا جا سکتا. "ترتیبات" > "BitTorrent کے کنکشن کی صورتحال" کی حیثیت کی جانچ پڑتال کریں</string>
     <string name="send_bitcoin_tip">ویکیپیڈیا عطیہ حساب</string>
-    <string name="welcome_to_frostwire">FrostWire %s خوش آمدید</string>
+    <string name="welcome_to_frostwire">SnapLoad %s خوش آمدید</string>
     <string name="bittorrent_off_data_saver_on">"BitTorrent off (Data Saver On)"</string>
     <string name="ad_free">کوئی اشتہارات</string>
     <string name="current_plan">موجودہ پلان</string>
@@ -228,7 +228,7 @@
     <string name="cancel_menu_action">سٹاپ منتقلی</string>
     <string name="canceling">منسوخ کرنا</string>
     <string name="issue_with_tip_donation_uri">کچھ کا عطیہ ویب ایڈریس کے ساتھ غلط نہیں ہے</string>
-    <string name="frostwire_is_running">FrostWire چل رہا ہے</string>
+    <string name="frostwire_is_running">SnapLoad چل رہا ہے</string>
     <string name="http_download_status_save_dir_error">ڈائرکٹری محفوظ کریں موجود نہیں ہے یا پیدا نہیں کیا جا سکتا</string>
     <string name="select_option_below">ذیل میں اختیار کو منتخب کریں:</string>
     <string name="device_storage">کے آلے کا ذخیرہ</string>
@@ -249,7 +249,7 @@
     <string name="torrent_fetcher_download_status_downloading_torrent">ڈاؤن لوڈ کرنا سیلاب</string>
     <string name="advertisement">اشتہار</string>
     <string name="pick_the_files_you_want_to_download_from_this_torrent">فائلوں اٹھاو آپ کو اس سیلاب سے ڈاؤن لوڈ کرنا چاہتے ہیں</string>
-    <string name="minimize_frostwire">FrostWire کو کم سے کم</string>
+    <string name="minimize_frostwire">SnapLoad کو کم سے کم</string>
     <string name="failed_to_set_wallpaper">وال پیپر سیٹ کرنے میں ناکام ہوگیا</string>
     <string name="cancel_delete_menu_action">بند کرو اور ڈیٹا حذف</string>
     <string name="seeding_settings_explanation">انٹرنیٹ پر BitTorrent کے صارفین کا ڈیٹا آپ بارشیں بیج کی فائل کو حصوں کو ڈاؤن لوڈ کرنے کے قابل ہو جائے گا.</string>
@@ -284,7 +284,7 @@
     <string name="cheaper_than_beer">بیئر سے سستا</string>
     <string name="rating_reminder_description">آپ FrostWire محبت ہے تو ہمیں شرح کے لئے ایک لمحے لے لو.</string>
     <string name="includes_3_day_free_trial">3 دن کا مفت ٹرائل مشتمل. تجویز کردہ</string>
-    <string name="intent_text">FrostWire صرف مجاز فائلوں اشتراک کرنے کے لئے ایک ہم مرتبہ سے ہم مرتبہ کے پروگرام ہے. نصب ہو اور پروگرام استعمال کرتے ہوئے حاصل کرنے یا غیر مجاز مواد کی تقسیم کے لئے لائسنس کا قیام نہیں کرتا.</string>
+    <string name="intent_text">SnapLoad صرف مجاز فائلوں اشتراک کرنے کے لئے ایک ہم مرتبہ سے ہم مرتبہ کے پروگرام ہے. نصب ہو اور پروگرام استعمال کرتے ہوئے حاصل کرنے یا غیر مجاز مواد کی تقسیم کے لئے لائسنس کا قیام نہیں کرتا.</string>
     <string name="seeding_has_been_turned_off">بوائ بند کردیا گیا ہے</string>
     <string name="transfers_context_menu_copy_magnet">کاپی مقناطیس</string>
     <string name="try_other_keywords">اس سے کم / مختلف مطلوبہ الفاظ کی کوشش کریں</string>
@@ -300,7 +300,7 @@
     <string name="rate_our_app">ہمارے اپلی کیشن کی درجہ بندی کریں</string>
     <string name="peers_n">ہم عمر: %s</string>
     <string name="cheaper_than_cigarettes">سگریٹ کے مقابلے میں سستی</string>
-    <string name="update_message">FrostWire ایک نئے کارکردگی اپ ڈیٹ ڈاؤن لوڈ کیا ہے کے لئے آپ کو، براہ مہربانی، آگے بڑھو اور اب آپ اسے نصب کرنے کے لئے چاہتے ہیں تو OK بٹن کو چھو.</string>
+    <string name="update_message">SnapLoad ایک نئے کارکردگی اپ ڈیٹ ڈاؤن لوڈ کیا ہے کے لئے آپ کو، براہ مہربانی، آگے بڑھو اور اب آپ اسے نصب کرنے کے لئے چاہتے ہیں تو OK بٹن کو چھو.</string>
     <string name="days_left">دن باقی</string>
     <string name="media_player_failed">میڈیا پلیئر میں ناکام رہے</string>
     <string name="six_months">6 ماہ</string>
